Fix: Ensure consistent gap between map icons

--- a/src/components/studio/GeneralElements.module.css
+++ b/src/components/studio/GeneralElements.module.css
@@ -79,7 +79,9 @@
 }
 
 .playerCivGrid {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(9, auto);
+  grid-gap: 8px;
   box-sizing: border-box;
   padding: 5px; /* Overall padding for the grid itself */
   transition: transform 0.2s ease-out;
@@ -87,7 +89,7 @@
 }
 
 .player1CivGrid {
-  flex-direction: row-reverse;
+  direction: rtl;
 }
 
 .player2CivGrid {
